# travel-agent

./: .gitignore  CINEMATIC_GLOBE_REPORT.md  CLAUDE.md  DECISIONS.md  LICENSE  README.md  check-scene.js  done_check.sh  feature_list.json  lint_check.py  lint_check.sh  package-lock.json  progress.md  session-handoff.md  smart-travel-assistant-spec.md  test-redesign.js  verify.py
.claude/: settings.json
.claude/hooks/: check-secrets.sh  guard-bash.sh  typecheck.sh
.claude/rules/: backend.md  frontend.md  quality.md  workflow.md
.playwright-mcp/: page-2026-06-29T10-22-07-184Z.yml
backend/: .env.example  pyproject.toml
backend/src/: main.py
backend/src/agent/: graph.py  state.py
backend/src/schemas/: travel.py
backend/src/tools/: amap_mcp.py  currency.py  tavily_search.py  unsplash_images.py
frontend/: frontend-spec.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  CustomCursor.tsx  ErrorBoundary.tsx  Globe.tsx  GlobeDaylight.tsx  GlobeHeatmap.tsx  LocationInfoCard.tsx  Map.tsx  TopNavBar.tsx
frontend/src/components/three/: CameraController.tsx  DeepSpaceElements.tsx  Globe.tsx  InteractionController.tsx  Marker.tsx  (+3 more)
frontend/src/data/: markers.ts
frontend/src/hooks/: useCameraController.ts  useRaycaster.ts  useWebSocket.ts
frontend/src/pages/: Landing.tsx  Main.tsx  MainApp.tsx
frontend/src/scenes/: MainScene.tsx
frontend/src/services/: api.ts
frontend/src/types/: react-globe.gl.d.ts
hooks/: pre-commit
